BaseOfProduct/Jenkins/security_gr.tf

resource "aws_security_group" "other_sg" {
  vpc_id = aws_vpc.main_base.id
  name   = "Other_SG"
  dynamic "ingress" {
    for_each = ["80", "8080"]
    content {
      from_port   = ingress.value
      to_port     = ingress.value
      protocol    = "tcp"
      cidr_blocks = ["0.0.0.0/0"]
    }
  }
  ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }
  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
  tags = {
    Name = "SecurityGroup for Jenkins and Web"
  }
}
#===================================================
resource "aws_security_group" "elb_sg" {
  vpc_id = aws_vpc.main_base.id

  ingress {
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }
  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}
#========================================================
resource "aws_security_group" "rds_sg" {
  vpc_id = aws_vpc.main_base.id
  name   = "RDS_SG"
  ingress {
    protocol    = "tcp"
    from_port   = 3306
    to_port     = 3306
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}
#=====================================================
/*
resource "aws_security_group" "ecs_sg" {
  vpc_id = aws_vpc.main_base.id

  dynamic "ingress" {
    for_each = ["80", "8080", "8081"]
    content {
      from_port   = ingress.value
      to_port     = ingress.value
      protocol    = "tcp"
      cidr_blocks = ["0.0.0.0/0"]
    }
  }
  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}
*/
